<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Guardiões Da Saúde</string>

    <string name="profile">Perfil</string>
    <string name="settings">Configurações</string>
    <string name="about">Sobre</string>
    <string name="help">Ajuda</string>
    <string name="exit">Sair</string>

    <string name="news">Notícias</string>
    <string name="map">Mapa da Saúde</string>
    <string name="tip">Dicas de Saúde</string>
    <string name="diary">Diário da Saúde</string>
    <string name="join">Participe agora!</string>

    <string name="register">Cadastrar</string>
    <string name="enter">Entrar</string>

    # NewsActivity
    <string name="news_activity_title">Notícias</string>
    <string name="news_activity_search">Procurar</string>
    <string name="news_activity_hyphen">-</string>

    # StateActivity
    <string name="state_activity_message">Como você está\nse sentindo?</string>
    <string name="state_activity_good">Bem</string>
    <string name="state_activity_bad">Mal</string>

    # SymptomsActivity
    <string name="symptom_activity_message">Qual desses sintomas\nvocê está sentindo?</string>
    <string name="symptom_activity_symptom">Sintomas</string>
    <string name="symptom_activity_other">Outros</string>
    <string name="symptom_activity_confirm">Confirmar</string>

    # SelectParticipantActivity
    <string name="select_participant_activity_message">De quem será\no relatório?</string>
    <string name="select_participant_activity_age"># anos</string>
    <string name="select_participant_activity_family">Familiares</string>

</resources>