<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:checked="true"
            android:icon="@drawable/icon_home"
            android:title="@string/home" />

        <item
            android:id="@+id/profile"
            android:icon="@drawable/icon_profile"
            android:title="@string/profile" />

        <!--<item
            android:id="@+id/setting"
            android:icon="@drawable/icon_setting"
            android:title="@string/setting" />-->

        <item
            android:id="@+id/about"
            android:icon="@drawable/icon_about"
            android:title="@string/about" />

        <item
            android:id="@+id/help"
            android:icon="@drawable/icon_help"
            android:title="@string/help" />

        <item
            android:id="@+id/exit"
            android:icon="@drawable/icon_exit"
            android:title="@string/exit" />

    </group>

</menu>